<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <android.support.v7.widget.Toolbar
            android:id="@+id/user_pass_change_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/user_pass_change_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingVertical="18dp"
                    android:paddingLeft="8dp"
                    android:text="Cambiar contraseña de "
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/user_pass_change_antigua_contrasena_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="Antigua contraseña"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/user_pass_change_input_antigua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="Nueva contraseña"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/user_pass_change_input_nueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="Repita la nueva contraseña"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/user_pass_change_input_repetir_nueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:text="" />


        <Button
            android:id="@+id/user_pass_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:background="@color/colorPrimaryLight"
            android:elevation="18dp"
            android:textSize="18dp"
            android:text="Cambiar Contraseña"
            android:onClick="cambiarContrasena"/>

    </LinearLayout>
</ScrollView>