...
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="Nombre de usuario"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/input_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="16dp"
                        android:inputType="textPersonName"
                        android:text="" />
...
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="Contraseña"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/input_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="16dp"
                        android:inputType="textPassword"
                        android:text="" />

                    <Button
                        android:id="@+id/boton_iniciarSesion"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorPrimaryLight"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="iniciarSesion"
                        android:paddingHorizontal="16dp"
                        android:text="Iniciar Sesión"
                        android:textSize="20dp" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
...
