<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/users_management_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_menu"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:onClick="showMenu"
                            android:src="@drawable/ic_menu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:paddingVertical="18dp"
                            android:paddingLeft="8dp"
                            android:text="Gestión de usuarios"
                            android:textColor="@android:color/white"
                            android:textSize="24dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.Toolbar>

                <ListView
                    android:id="@+id/users_management_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="right"
                    android:layout_margin="16dp"
                    android:onClick="anadirUsuario"
                    android:src="@drawable/ic_add"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/users_management_selected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18dp"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"/>


                <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/users_management_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:visibility="gone"
                    app:itemIconTint="@android:color/white"
                    app:itemTextColor="@android:color/white"
                    app:menu="@menu/menu_users_management" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/navigation_header"
        app:itemBackground="@android:color/transparent"
        app:menu="@menu/menu_navigation" />
</android.support.v4.widget.DrawerLayout>

